# tesconvert

./: Cargo.toml  README.md
src/: common.rs  lib.rs  plugin.rs
tesconvert/: Cargo.toml
tesconvert/mwob/: default.ini
tesconvert/src/: config.rs  lib.rs  main.rs  morrowind.rs  oblivion.rs
tesutil/: Cargo.toml
tesutil/src/: common.rs  lib.rs  plugin.rs  save.rs  tes3.rs  tes4.rs  world.rs
tesutil/src/plugin/: field.rs  record.rs  tes3.rs  tes4.rs
tesutil/src/plugin/tes3/: field.rs  npc.rs  player.rs  plugin.rs  record.rs  reference.rs
tesutil/src/plugin/tes3/test/: expected.esp
tesutil/src/plugin/tes4/: field.rs  group.rs  plugin.rs  record.rs
tesutil/src/save/: actor.rs  actorref.rs  change.rs
tesutil/src/save/test/: autosave.ess  quicksave.ess
tesutil/src/tes3/: plugin.rs  world.rs
tesutil/src/tes3/plugin/: active_effects.rs  actor.rs  birthsign.rs  book.rs  class.rs  creature.rs  enchantable.rs  enchantment.rs  field.rs  gmst.rs  item.rs  magic.rs  misc_item.rs  npc.rs  npc_change.rs  package.rs  player.rs  plugin.rs  potion.rs  race.rs  record.rs  reference.rs  spell.rs  weapon.rs
tesutil/src/tes3/plugin/test/: Morrowind.ini  multipatch.esp
tesutil/src/tes4/: cosave.rs  plugin.rs  save.rs  world.rs
tesutil/src/tes4/cosave/: obconvert.rs
tesutil/src/tes4/plugin/: ammo.rs  birthsign.rs  book.rs  class.rs  enchantable.rs  enchantment.rs  field.rs  group.rs  item.rs  magic.rs  magic_effect.rs  npc.rs  plugin.rs  potion.rs  race.rs  record.rs  soul_gem.rs  spell.rs  weapon.rs
tesutil/src/tes4/save/: actor.rs  actorref.rs  change.rs  form.rs
(+5 files in other folders)
