[package]
name = "tesconvert"
version = "0.1.0"
authors = ["descawed <tesutil@descawed.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tesutil = { path = "../tesutil" }
clap = "3.2"
anyhow = "1.0"
num = "0.4"
rust-ini = "0.18"

[target.'cfg(windows)'.dependencies]
winreg = "0.10"