[package]
name = "tesutil"
version = "0.1.0"
authors = ["descawed <descawed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
len-trait = "0.6"
bitflags = "1.2"
flate2 = "1.0"
num_enum = "0.5"
thiserror = "1.0"
enum-map = "0.6"